# Cookiecutter-Python-Project

./: README.rst  cookiecutter.json
dependencies/: pymssql-2.1.5-cp39-cp39-manylinux1_x86_64.whl
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .bumpversion.cfg  .gitlab-ci.yml  AUTHORS.md  README.md  pyproject.toml
{{cookiecutter.project_slug}}/dependencies/: pymssql-2.2.7-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  pymssql-2.2.7-cp310-cp310-manylinux_2_24_x86_64.whl  pymssql-2.2.7-cp310-cp310-win_amd64.whl
{{cookiecutter.project_slug}}/scripts/: build.ps1  ci.ps1  deploy.ps1
{{cookiecutter.project_slug}}/src/: cli.py
{{cookiecutter.project_slug}}/src/models/: __init__.py  models.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_underscore}}/: __init__.py  {{cookiecutter.project_underscore}}.py
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py  test_{{cookiecutter.project_underscore}}.py
