{%- set license_classifiers = {
    'MIT': 'License :: OSI Approved :: MIT License',
    'BSD-3-Clause': 'License :: OSI Approved :: BSD License',
    'ISC': 'License :: OSI Approved :: ISC License (ISCL)',
    'Apache-2.0': 'License :: OSI Approved :: Apache Software License',
    'GPL-3.0-only': 'License :: OSI Approved :: GNU General Public License v3 (GPLv3)'
} -%}
[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.poetry]
name = "{{ cookiecutter.project_name }}"
description="{{ cookiecutter.project_short_description }}"
version = "{{ cookiecutter.version }}"
authors = ["{{ cookiecutter.full_name.replace('\"', '\\\"') }} <{{ cookiecutter.email }}>"]
readme = "README.md"
{%- if cookiecutter.open_source_license in license_classifiers %}
license =  "{{ cookiecutter.open_source_license }}"
{%- endif %}
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
{%- if cookiecutter.open_source_license in license_classifiers %}
    '{{ license_classifiers[cookiecutter.open_source_license] }}',
{%- endif %}
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]
packages = [
    { include = "{{ cookiecutter.project_underscore }}" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.6,<4.0"
typer = "*"
{%- if cookiecutter.add_sqlalchemy_dependencies == 'y' %}
pymssql = [
        {path = "dependencies/pymssql-2.1.5-cp39-cp39-win_amd64.whl", markers = "sys_platform == 'win32'"},
        {path = "dependencies/pymssql-2.1.5-cp39-cp39-manylinux1_x86_64.whl", markers = "sys_platform == 'linux2'"}
    ]
SQLAlchemy = "*"
python-dotenv = "*"
{%- endif %}

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
pytest = "*"
bump2version = "*"
pyinstaller = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
