{%- set license_classifiers = {
    'MIT': 'License :: OSI Approved :: MIT License',
    'BSD-3-Clause': 'License :: OSI Approved :: BSD License',
    'ISC': 'License :: OSI Approved :: ISC License (ISCL)',
    'Apache-2.0': 'License :: OSI Approved :: Apache Software License',
    'GPL-3.0-only': 'License :: OSI Approved :: GNU General Public License v3 (GPLv3)'
} -%}
[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.poetry]
name = "{{ cookiecutter.project_name }}"
description="{{ cookiecutter.project_short_description }}"
version = "{{ cookiecutter.version }}"
authors = ["{{ cookiecutter.full_name.replace('\"', '\\\"') }} <{{ cookiecutter.email }}>"]
readme = "README.md"
{%- if cookiecutter.open_source_license in license_classifiers %}
license =  "{{ cookiecutter.open_source_license }}"
{%- endif %}
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
{%- if cookiecutter.open_source_license in license_classifiers %}
    '{{ license_classifiers[cookiecutter.open_source_license] }}',
{%- endif %}
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]
packages = [
    { include = "{{ cookiecutter.project_underscore }}", from = "src" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
typer = ">=0.3.2"
{%- if cookiecutter.add_sqlalchemy_dependencies == 'y' %}
pymssql = [
        {path = "dependencies/pymssql-2.2.7-cp310-cp310-win_amd64.whl", markers = "sys_platform == 'win32'"},
        {path = "dependencies/pymssql-2.2.7-cp310-cp310-manylinux_2_24_x86_64.whl", markers = "sys_platform == 'linux2'"}
    ]
SQLAlchemy = ">=1.4.22"
python-dotenv = ">=0.19.0"
{%- endif %}

[tool.poetry.dev-dependencies]
black = ">=20.8b1"
flake8 = ">=3.9.2"
pytest = ">=6.2.4"
bump2version = ">=1.0.1"
pyinstaller = ">=4.5.1"
ruff = "^0.0.261"
pre-commit = "^3.2.2"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[[tool.poetry.source]]
name = "wbc"
url = "http://pypi.dokku2.woosterbrush.com/"
priority = "primary"

[[tool.poetry.source]]
name = "PyPI"
priority = "default"
